# prodject_Dash_events

./: .gitignore  README.md  Untitled.ipynb  app.py  cloudflare_to_duckdb.py  pyproject.toml  upload_to_r2.py
assets/: custom.css
data/: gr_services_Q_25_26.parquet  gr_services_all_25_26.parquet  gr_services_first_letter_25_26.parquet
docs/: medical_dashboard_design_mockup.html  promt.md  service_name.txt  tree_cloudflare.txt  tree_prodject.txt
pages/: home.py
scripts/: card_temp.py  cloudflare_to_duckdb.py  download_data_treatment.py  gr_services_first_letter_25_26.py  gr_servioces_all_25_26.py  home-duckdb.py  main_any_month.py  query_home.py  upload_to_r2.py
