[project]
name = "prodject-dash-events"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh",email = "314koval.ok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.43.40,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "duckdb (>=1.5.4,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
