[project]
name = "prodject-dash-events"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh",email = "314koval.ok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.43.40,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dash (>=4.4.0,<5.0.0)",
    "dash-ag-grid (>=35.2.0,<36.0.0)",
    "polars (>=1.42.1,<2.0.0)",
    "pyarrow[dataset,s3] (>=25.0.0,<26.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
